# django_rest_api

./: .env_model  .gitignore  README.md  pyproject.toml  requeriments.txt  setupdb.sql  setupdb_first_insert.sql  setupdb_mock_data.sql
apps/accounts/: admin.py  serializers.py  urls.py  views.py
apps/accounts/helpers/: backends.py  jwt.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/models/: __init__.py  customuser_model.py
apps/api/: admin.py  pagination.py  serializers.py  urls.py
apps/api/migrations/: 0001_initial.py  0002_reserve.py
apps/api/models/: car_type_model.py  client_model.py  reserve_model.py  revision_type_model.py
apps/api/views/: authentication.py  car_type_views.py  client_views.py  doc_type_views.py  reserve_views.py  revision_type_views.py
apps/user/: serializers.py  urls.py  views.py
apps/user/helpers/: jwt.py
apps/user/migrations/: 0001_initial.py
apps/user/models/: __init__.py  customuser_manager_model.py  customuser_model.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  custom_user.py  custom_user_manager.py
reservasApp/: manage.py  settings.py  urls.py  wsgi.py
reservasApp/apps/api/: admin.py  serializers.py  urls.py
reservasApp/apps/api/migrations/: 0001_initial.py
reservasApp/apps/api/models/: client_model.py  doc_type_model.py
reservasApp/apps/api/views/: client_views.py  doc_type_views.py
reservasApp/reservasApp/: settings.py
